[package]
name = "mev-task"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2.0.13"
ethers-solc = "1.0.2"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.89"
serde = "1.0.149"
hex-literal = "0.4.1"
eyre = "0.6.12"
futures-core = "0.3.30"
futures = "0.3.30"
dotenv = "0.15.0"
